# nextpnr

./: .cirrus.yml  .clang-format  .gitignore  .gitmodules  BBAsm.cmake  BUILD  CMakeLists.txt  CODE_OF_CONDUCT  COPYING  Cargo.toml  MODULE.bazel  Makefile  README.md  apidraft.h  database.cc  database.h  default.nix  demo.cc  flake.nix  nextpnr.nix  rust-toolchain.toml  shell.nix  torc
bba/: CMakeLists.txt  README.md  bba.cmake  main.cc
common/: CMakeLists.txt  arch_api.h  arch_pybindings_shared.h  archcheck.cc  base_arch.h  base_clusterinfo.h  basectx.cc  basectx.h  bits.cc  bits.h  chain_utils.h  command.cc  command.h  constraints.h  context.cc  context.h  design.cc  design.h  design_utils.cc  design_utils.h  deterministic_rng.h  dynamic_bitarray.h  emb.cc  embed.cc  embed.h  exclusive_state_groups.h  exclusive_state_groups.impl.h  fast_bels.h  handle_error.cc  hash_table.h  hashlib.h  idstring.cc  idstring.h  idstringlist.cc  idstringlist.h  indexed_store.h  log.cc  log.h  nextpnr.cc  nextpnr.h  (+56 more)
common/kernel/: CMakeLists.txt  arch_api.h  arch_pybindings_shared.h  archcheck.cc  array2d.h  base_arch.h  basectx.cc  basectx.h  chain_utils.h  command.cc  command.h  constraints.impl.h  context.cc  context.h  design_utils.cc  design_utils.h  deterministic_rng.h  embed.cc  embed.h  exclusive_state_groups.h  exclusive_state_groups.impl.h  handle_error.cc  hashlib.h  idstring.cc  idstringlist.cc  idstringlist.h  indexed_store.h  log.cc  log.h  nextpnr.cc  nextpnr.h  nextpnr_assertions.cc  nextpnr_base_types.h  nextpnr_namespaces.cc  nextpnr_types.cc  nextpnr_types.h  property.h  pybindings.cc  pycontainers.h  pywrappers.h  (+17 more)
common/opencl/: embed_kernels.py  ocular.cl
common/place/: CMakeLists.txt  detail_place_cfg.h  detail_place_core.cc  detail_place_core.h  fast_bels.h  parallel_refine.cc  place_common.cc  place_common.h  placer1.cc  placer1.h  placer_heap.cc  placer_heap.h  placer_phetdp.cc  placer_phetdp.h  placer_star.cc  placer_star.h  placer_static.cc  placer_static.h  static_util.h  timing_opt.cc  timing_opt.h
common/route/: CMakeLists.txt  awooter.cc  router1.cc  router1.h  router2.cc  router2.h
ecp5/: .gitignore  CMakeLists.txt  arch.cc  arch.h  arch_place.cc  arch_pybindings.cc  arch_pybindings.h  archdefs.h  baseconfigs.cc  bitstream.cc  bitstream.h  cells.cc  cells.h  config.cc  config.h  constids.inc  dcu_bitstream.h  ecp5_available.h.in  family.cmake  gfx.cc  gfx.h  globals.cc  globals.h  io.cc  iotypes.inc  lpf.cc  main.cc  pack.cc  pack.h  pio.cc  pio.h  place_legaliser.cc  place_legaliser.h  portpins.inc  project.cc  trellis_import.py
ecp5/docs/: primitives.md
ecp5/resource/: chipdb.rc  embed.cc  resource.h
ecp5/synth/: .gitignore  blinky.v  blinky.ys  blinky_nopack.ys  cells.v  counter.v  simple_map.v  top.lpf  ulx3s.v  ulx3s.ys  ulx3s_empty.config  wire.v  wire.ys
gowin/: CMakeLists.txt  arch.cc  arch.h  arch_pybindings.cc  arch_pybindings.h  archdefs.h  cells.cc  cells.h  constids.inc  cst.cc  cst.h  family.cmake  family_aliases.h  gfx.cc  gfx.h  globals.cc  globals.h  main.cc  pack.cc
gui/: CMakeLists.txt  Qt5Customizations.cmake  application.cc  application.h  base.qrc  basewindow.cc  basewindow.h  create_img.sh  designwidget.cc  designwidget.h  emb.cc  emb.h  fpgaviewwidget.cc  fpgaviewwidget.h  gui.cmake  infotab.cc  infotab.h  line_editor.cc  line_editor.h  lineshader.cc  lineshader.h  mainwindow.cc  mainwindow.h  mainwindow.ui  nextpnr.qrc  pyconsole.cc  pyconsole.h  pythontab.cc  pythontab.h  quadtree.h  treemodel.cc  treemodel.h  worker.cc  worker.h  yosys_edit.cc  yosys_edit.h  yosystab.cc  yosystab.h
gui/dummy/: mainwindow.cc  mainwindow.h
gui/ecp5/: mainwindow.cc  mainwindow.h  nextpnr.qrc
gui/fpga_interchange/: mainwindow.cc  mainwindow.h
gui/generic/: mainwindow.cc  mainwindow.h
gui/gowin/: mainwindow.cc  mainwindow.h  nextpnr.qrc
gui/himbaechel/: mainwindow.cc  mainwindow.cpp
gui/ice40/: family.cmake  mainwindow.cc  mainwindow.h  nextpnr.qrc  worker.cc  worker.h
gui/leuctra/: mainwindow.cc  mainwindow.h
gui/machxo2/: mainwindow.cc  mainwindow.h  nextpnr.qrc
gui/mistral/: family.cmake  mainwindow.cc  mainwindow.h
gui/nexus/: mainwindow.cc  mainwindow.h
gui/xc7/: family.cmake  mainwindow.cc  mainwindow.h
himbaechel/: CMakeLists.txt  arch.cc  arch.h  arch_pybindings.cc  arch_pybindings.h  archdefs.h  chipdb.h  family.cmake  himbaechel_api.cc  himbaechel_api.h  himbaechel_constids.h  himbaechel_gfxids.h  himbaechel_helpers.cc  himbaechel_helpers.h  main.cc
himbaechel/himbaechel_dbgen/: bba.py  chip.py
ice40/: .gitignore  CMakeLists.txt  arch.cc  arch.h  arch_place.cc  arch_place.h  arch_pybindings.cc  arch_pybindings.h  archdefs.h  bitstream.cc  bitstream.h  blinky.proj  blinky.sh  blinky.v  blinky.ys  blinky_map.v  blinky_nopack.ys  blinky_noyspack.sh  blinky_tb.v  cells.cc  cells.h  chains.cc  chains.h  chip.cc  chip.h  chipdb.py  constids.inc  delay.cc  family.cmake  gfx.cc  gfx.h  icebreaker.pcf  icebreaker.v  icebreaker.ys  main.cc  makefile.inc  pack.cc  pack.h  pcf.cc  pcf.h  (+9 more)
ice40/benchmark/: .gitignore  Makefile  picorv32.v  picosoc.v  report.ipynb  simpleuart.v
ice40/carry_tests/: .gitignore  counter.v  counter_tb.v  test.sh
ice40/pack_tests/: ffmodes.v  io_wrapper.v  (+3 more)
machxo2/: .gitignore  CMakeLists.txt  README.md  arch.cc  arch.h  arch_place.cc  arch_pybindings.cc  arch_pybindings.h  archdefs.h  baseconfigs.cc  bitstream.cc  bitstream.h  cells.cc  cells.h  config.cc  config.h  constids.inc  facade_import.py  family.cmake  gfx.cc  gfx.h  globals.cc  iotypes.inc  lpf.cc  machxo2_available.h.in  main.cc  pack.cc  pio.cc  pio.h
mistral/: CMakeLists.txt  arch.cc  arch.h  arch_pybindings.cc  arch_pybindings.h  archdefs.cc  archdefs.h  base_bitstream.cc  bitstream.cc  constids.inc  delay.cc  family.cmake  globals.cc  io.cc  lab.cc  m10k.cc  main.cc  pack.cc  pins.cc  qsf.cc
nexus/: .gitignore  CMakeLists.txt  arch.cc  arch.h  arch_place.cc  arch_pybindings.cc  arch_pybindings.h  archdefs.h  constids.inc  family.cmake  fasm.cc  global.cc  io.cc  main.cc  pack.cc  pdc.cc  pins.cc  post_place.cc
(+566 files in other folders)
